adding translations to app

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,4 +1,8 @@
 {
+  "navbar": {
+    "home": "Home",
+    "about": "About"
+  },
   "home": {
     "title": "VISA TO USA, simple, easy and fast!",
     "sub_title": "Start now, and get your visa application within onyl 24 hours!"
